------maintenance completely taken over by Andras Varga-------
FDDI70.arj
  - corrected a missing ':string' type declaration in a NED file
FDDI73.arj
  - `display:' phrases added to NED
  - bug fixed in othermods.h: FDDI_Address_Generator's constructor didn't initialize f
  - fddi_mac.cc: FDDI_MAC: setOwner calls for sync_buf/async_buf removed;
  - added a name string to sync_buf/async_buf
FDDI74.arj
  - improved "display:" stuff in fddi_net.ned
FDDI76.arj
  - updated to the new histograms in sim161
FDDI77.arj
  - added fddi.ide; doesn't run correctly under NT though (causes exception)
    [later discovered it was caused by the mystrlwr() bug, see Jul 11, 1999]
FDDI78.arj
  - makefile renamed to makefile.in
FDDI79.arj
  - simulation.error() calls corrected to error()
FDDI80.arj
  - ?
#81 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog; some cosmetics on it (indents etc)
  - removed support for DOS with BC3.1
Jul 11, 1999
  - bug in mystrlwr() [othermod.cc] fixed
------ omnetpp-2.0b1 released ------
------ omnetpp-2.0b2 released ------
Oct 10, 1999
  - standardized indentation in ned files
  - fddi_net.ned split to fddi_nodes.ned, fddi_rings.ned, fddi_nets.ned
  - proper README written
Oct 17, 1999
  - Computer renamed to FDDIStation (clashed with Token's Computer when
    linking all sample simulations into one executable)
Dec 23, 1999
  - BC3.1 support removed
  - rewritten msg->addPar( *new cPar(...)) lines (see change to cPar interface
    in the sim library)
  - minor cosmetics changes
Jan 25, 2000
  - ssm_ifs.cc updated because of cArray interface change
------ omnetpp-2.0b3 released ------
Mar 12, 2000
  - readme expanded with advice on PVM setup
May 7, 2000
  - char * --> const char * changes
------ omnetpp-2.0b4 released ------
Jun 2, 2000
  - fix in MSVC makefile; warning eliminated in othermod.cc
------ omnetpp-2.0b5 released ------